// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HearingEmails Does not allow editing when ReadOnly 1`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Appellant Email
    </strong>
    <pre>
      123@gmail.com
    </pre>
  </div>
</DocumentFragment>
`;

exports[`HearingEmails Does not show required when ReadOnly 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textinput cf-inline-field   "
  >
    <label
      for="Appellant Email"
    >
      <strong>
        <span>
          Appellant Email
        </span>
      </strong>
    </label>
    <div
      class="input-container"
    >
      <input
        aria-readonly="true"
        class="cf-form-textinput cf-inline-field"
        id="Appellant Email"
        name="Appellant Email"
        readonly=""
        type="text"
        value="123@gmail.com"
      />
    </div>
  </div>
  <div
    class="helper-text"
  >
    This email address will be used to send notifications for this hearing only.
  </div>
</DocumentFragment>
`;

exports[`HearingEmails Matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textinput cf-inline-field   "
  >
    <label
      for="Appellant Email"
    >
      <strong>
        <span>
          Appellant Email
        </span>
      </strong>
    </label>
    <div
      class="input-container"
    >
      <input
        class="cf-form-textinput cf-inline-field"
        id="Appellant Email"
        name="Appellant Email"
        type="text"
        value="123@gmail.com"
      />
    </div>
  </div>
  <div
    class="helper-text"
  >
    This email address will be used to send notifications for this hearing only.
  </div>
</DocumentFragment>
`;

exports[`HearingEmails Respects required prop 1`] = `
<DocumentFragment>
  <div
    class="cf-form-textinput cf-inline-field   "
  >
    <label
      for="Appellant Email"
    >
      <strong>
        <span>
          Appellant Email
          <span
            class="cf-required"
          >
            Required
          </span>
        </span>
      </strong>
    </label>
    <div
      class="input-container"
    >
      <input
        class="cf-form-textinput cf-inline-field"
        id="Appellant Email"
        name="Appellant Email"
        type="text"
        value="123@gmail.com"
      />
    </div>
  </div>
  <div
    class="helper-text"
  >
    This email address will be used to send notifications for this hearing only.
  </div>
</DocumentFragment>
`;
